[gd_scene load_steps=8 format=3 uid="uid://l3oux7ssuq51"]

[ext_resource type="Script" path="res://scripts/login.gd" id="1_0hjvu"]
[ext_resource type="LabelSettings" uid="uid://di8ueun3ghguf" path="res://font/label_settings/tittle_64.tres" id="2_83std"]
[ext_resource type="LabelSettings" uid="uid://b4p7lely1emqx" path="res://font/label_settings/label_24.tres" id="3_vk5tt"]
[ext_resource type="Texture2D" uid="uid://b7mlw1d8cfoua" path="res://icons/visibility.png" id="4_6cqsb"]
[ext_resource type="Texture2D" uid="uid://buxe0rxq6pk0c" path="res://icons/visibility-hide.png" id="5_xtxvc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnero"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.6)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="Theme" id="Theme_5b7rg"]
Panel/styles/panel = SubResource("StyleBoxFlat_lnero")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0hjvu")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(320, 460)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -230.0
offset_right = 160.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5b7rg")
metadata/_edit_lock_ = true

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
metadata/_edit_lock_ = true

[node name="Tittle" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
text = "New / Open"
label_settings = ExtResource("2_83std")
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_lock_ = true

[node name="S1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Name" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Name"
label_settings = ExtResource("3_vk5tt")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Name_input" type="LineEdit" parent="Panel/VBox"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../Pass_input/Pass_input")
focus_next = NodePath("../Pass_input/Pass_input")
placeholder_text = "File Name"
alignment = 1
metadata/_edit_lock_ = true

[node name="S2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Pass" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Password"
label_settings = ExtResource("3_vk5tt")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Pass_input" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="Pass_input" type="LineEdit" parent="Panel/VBox/Pass_input"]
custom_minimum_size = Vector2(205, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../../Name_input")
focus_neighbor_bottom = NodePath("../../Buttons/Login")
focus_next = NodePath("../../Buttons/Login")
focus_previous = NodePath("../../Name_input")
placeholder_text = "File Password"
alignment = 1
secret = true
metadata/_edit_lock_ = true

[node name="Show_Hide" type="TextureButton" parent="Panel/VBox/Pass_input"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Show / Hide
Password"
focus_neighbor_left = NodePath("../Password_input")
focus_neighbor_top = NodePath("../../Username/Copy")
focus_neighbor_right = NodePath("../Copy")
focus_next = NodePath("../Copy")
focus_previous = NodePath("../../Username/Copy")
toggle_mode = true
texture_normal = ExtResource("4_6cqsb")
texture_pressed = ExtResource("5_xtxvc")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="S3" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_lock_ = true

[node name="Login" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../../Pass_input/Pass_input")
focus_neighbor_right = NodePath("../New")
focus_next = NodePath("../New")
focus_previous = NodePath("../../Pass_input/Pass_input")
text = "Open"
metadata/_edit_lock_ = true

[node name="New" type="Button" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../Login")
focus_neighbor_top = NodePath("../../Pass_input/Pass_input")
focus_previous = NodePath("../Login")
text = "New"
metadata/_edit_lock_ = true

[connection signal="text_submitted" from="Panel/VBox/Name_input" to="." method="_on_name_input_text_submitted"]
[connection signal="text_submitted" from="Panel/VBox/Pass_input/Pass_input" to="." method="_on_pass_input_text_submitted"]
[connection signal="toggled" from="Panel/VBox/Pass_input/Show_Hide" to="." method="_on_show_hide_toggled"]
[connection signal="pressed" from="Panel/VBox/Buttons/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Panel/VBox/Buttons/New" to="." method="_on_new_pressed"]
